--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,10 +13,27 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with: { python-version: 3.x }
+    - name: Bootstrap poetry
+      run: |
+        curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
+          | python - -y ${{ matrix.bootstrap-args }}
+    - name: Update PATH
+      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+    - name: Configure poetry
+      shell: bash
+      run: poetry config virtualenvs.in-project true
+    - name: Set up cache
+      uses: actions/cache@v2
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+    - name: Ensure cache is healthy
+      if: steps.cache.outputs.cache-hit == 'true'
+      run: timeout 10s poetry run pip --version || rm -rf .venv
     - name: Install dependencies
-      run: pip install --pre -e '.[docs]'
+      run: poetry install
     - name: Generate docs
-      run: cd docs && make html && cd ..
+      run: cd docs && poetry run make html && cd ..
     - name: Deploy documentation to github pages
       if: startsWith(github.ref, 'refs/tags/v')
       uses: peaceiris/actions-gh-pages@v3
