--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,21 +19,29 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python_version }}
-    - name: set pre-commit cache
+    - name: Bootstrap poetry
+      run: |
+        curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
+          | python - -y ${{ matrix.bootstrap-args }}
+    - name: Update PATH
+      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+    - name: Configure poetry
+      shell: bash
+      run: poetry config virtualenvs.in-project true
+    - name: Set up cache
       uses: actions/cache@v2
       with:
-        path: |
-          ~/.cache/pre-commit
-          ~/.cache/pip
-        key: ${{ matrix.python_version }}-${{ hashFiles('.pre-commit-config.yaml') }}-${{ hashFiles('setup.py') }}
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}-with-extras
+    - name: Ensure cache is healthy
+      if: steps.cache.outputs.cache-hit == 'true'
+      run: timeout 10s poetry run pip --version || rm -rf .venv
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --pre -e '.[dev]'
+      run: poetry install -E enum -E union
     - name: Pre-commit hooks
       if: ${{ matrix.python_version != 'pypy3' }}
-      run: pre-commit run --all-files
+      run: poetry run pre-commit run --all-files
     - name: Test with pytest
-      run: pytest
+      run: poetry run pytest
       env:
         PYTHONWARNINGS: error
