--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,38 @@
 repos:
-- repo: https://github.com/asottile/pyupgrade
-  rev: v2.7.4
-  hooks:
-  - id: pyupgrade
-    args: ["--py36-plus"]
-- repo: https://github.com/python/black
-  rev: 20.8b1
-  hooks:
-  - id: black
-    language_version: python3
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.4
-  hooks:
-  - id: flake8
-    additional_dependencies: ['flake8-bugbear==19.8.0']
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.790
-  hooks:
-  - id: mypy
-    additional_dependencies: [marshmallow-enum,typeguard,marshmallow]
-    args: [--show-error-codes]
-- repo: https://github.com/asottile/blacken-docs
-  rev: v1.9.1
-  hooks:
-  - id: blacken-docs
-    additional_dependencies: [black==19.3b0]
+  - repo: local
+    hooks:
+      - id: pyupgrade
+        name: pyupgrade
+        entry: pyupgrade
+        args: ["--py36-plus"]
+        language: system
+        types: [python]
+
+      - id: black
+        name: black
+        entry: black
+        language: system
+        require_serial: true
+        types: [python]
+
+      - id: flake8
+        name: flake8
+        entry: flake8
+        language: system
+        require_serial: true
+        types: [python]
+
+      - id: mypy
+        name: mypy
+        entry: mypy
+        args: [--show-error-codes]
+        language: system
+        require_serial: true
+        types: [python]
+
+      - id: blacken-docs
+        name: blacken-docs
+        entry: blacken-docs
+        language: system
+        require_serial: true
+        files: '\.(rst|md|markdown|py|tex)$'
